--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-fluent-ui",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "exports": {
     ".": {
@@ -14,16 +14,17 @@
   ],
   "scripts": {
     "build": "rslib build",
-    "check": "biome check --write",
     "dev": "rslib build --watch",
-    "format": "biome format --write",
     "test": "vitest run"
   },
   "devDependencies": {
     "@rslib/core": "^0.8.0",
     "@types/node": "^22.8.1",
+    "rsbuild-plugin-unplugin-vue": "^0.1.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
   },
-  "private": true
+  "peerDependencies": {
+    "vue": "^3.5.14"
+  }
 }
