--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -1,12 +1,26 @@
 {
   "name": "vue-fluent-ui",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
+  "main": "./dist/vue-fluent-ui.cjs.js",
+  "module": "./dist/vue-fluent-ui.es.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/vue-fluent-ui.es.js",
+      "require": "./dist/vue-fluent-ui.cjs.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": " vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
@@ -16,6 +30,7 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4",
     "vue-tsc": "^2.2.8"
   }
 }
