--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "vite",
     "build": " vite build",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
