--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -8,9 +8,9 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/vue-fluent-ui.js",
-      "require": "./dist/vue-fluent-ui.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/vue-fluent-ui.cjs"
     },
     "./style": "./dist/style.css"
   },
