--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
-  - 'packages/*'
+  - packages/*
 onlyBuiltDependencies:
   - '@biomejs/biome'
+  - '@parcel/watcher'
   - core-js
   - esbuild
