--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:publish": "pnpm run build && pnpm publish --no-git-checks "
+    "build:publish": "pnpm run build && pnpm publish "
   },
   "peerDependencies": {
     "vue": "^3.5.13"
