--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "private": true,
   "scripts": {
-
+    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\""
   },
   "packageManager": "pnpm@10.10.0",
-  "workspaces": [
-    "package",
-    "example"
-  ],
   "devDependencies": {
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "concurrently": "^9.2.0"
   }
 }
