--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "vite build",
     "build:publish": "pnpm run build && pnpm publish "
   },
