--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\""
+    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\"",
+    "create-component": "node scripts/create-component/create-component.js"
   },
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
