--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "concurrently": "^9.2.0"
+    "chalk": "^5.4.1",
+    "concurrently": "^9.2.0",
+    "inquirer": "^12.9.0",
+    "ora": "^8.2.0"
   }
 }
