feat(依赖): 添加vite-plugin-vue-devtools插件

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -15,6 +15,7 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
+    "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^2.2.12"
   }
 }
