--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -33,6 +33,7 @@
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.2.8"
   },
   "dependencies": {
