--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.89.0",
@@ -37,6 +38,7 @@
     "vue-tsc": "^2.2.8"
   },
   "dependencies": {
-    "@vueuse/core": "^13.6.0"
+    "@vueuse/core": "^13.6.0",
+    "lodash": "^4.17.21"
   }
 }
