refactor(组件): 添加按钮禁用属性并更新依赖版本

--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -8,9 +8,15 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/vue-fluent-ui.js",
-      "require": "./dist/vue-fluent-ui.cjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/vue-fluent-ui.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/vue-fluent-ui.cjs"
+      }
+
     },
     "./style.css": "./dist/vue-fluent-ui.css"
   },
@@ -32,7 +38,7 @@
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5",
+    "vite": "^7.1.5",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.8"
