refactor(脚本): 添加测试脚本与测试覆盖率支持

--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -16,7 +16,6 @@
         "types": "./dist/index.d.ts",
         "default": "./dist/vue-fluent-ui.cjs"
       }
-
     },
     "./style.css": "./dist/vue-fluent-ui.css"
   },
@@ -26,7 +25,9 @@
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
-    "build:publish": "pnpm run build && pnpm publish "
+    "build:publish": "pnpm run build && pnpm publish ",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
