--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\"",
-    "create-component": "node scripts/create-component/create-component.cjs"
+    "test": "pnpm --filter vue-fluent-ui test",
+    "utils:create-component": "node scripts/create-component/create-component.cjs"
   },
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
