refactor(配置): 为支持vitest调整tsconfig与vite配置

--- a/packages/vue-fluent-ui/tsconfig.json
+++ b/packages/vue-fluent-ui/tsconfig.json
@@ -7,7 +7,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": [
+      "vitest/importMeta"
+    ]
   },
   "include": [
     "src/**/*.ts",
