--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -27,7 +27,8 @@
     "build": "vite build",
     "build:publish": "pnpm run build && pnpm publish ",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.20",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/ui": "3.2.4",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
