--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\"",
-    "test": "pnpm --filter vue-fluent-ui test",
+    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\" \"start http://localhost:5173/\"",
+    "test": "pnpm --filter vue-fluent-ui test:ui",
     "utils:create-component": "node scripts/create-component/create-component.cjs"
   },
   "packageManager": "pnpm@10.14.0",
