--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "dev": "vite build --watch",
-    "build": "vbite build",
+    "build": "vite build",
     "build:publish": "pnpm run build && pnpm publish ",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
