--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\" \"start http://localhost:5173/\"",
+    "dev": "concurrently -n \"Library,Playground\" \"pnpm --filter vue-fluent-ui dev\" \"pnpm --filter playground dev\"",
     "test": "pnpm --filter vue-fluent-ui test:ui",
     "utils:create-component": "node scripts/create-component/create-component.cjs"
   },
