build: 迁移vitest，并且去掉vite的残余代码

--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -23,7 +23,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "rslib build -w",
     "build": "rslib build",
     "build:publish": "pnpm run build && pnpm publish ",
     "test": "vitest",
@@ -40,10 +40,9 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/ui": "3.2.4",
     "@vue/tsconfig": "^0.7.0",
+    "jsdom": "^27.0.0",
     "rsbuild-plugin-unplugin-vue": "^0.1.0",
     "typescript": "~5.8.3",
-    "vite": "^7.1.5",
-    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.8"
   },
