--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -3,21 +3,16 @@
   "private": false,
   "version": "0.0.3",
   "type": "module",
-  "module": "./dist/vue-fluent-ui.js",
-  "main": "./dist/vue-fluent-ui.cjs",
-  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/vue-fluent-ui.js"
-      },
-      "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/vue-fluent-ui.cjs"
-      }
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
     },
-    "./style.css": "./dist/vue-fluent-ui.css"
+    "./style.css": "./dist/index.css"
   },
   "files": [
     "dist"
