build(vue-fluent-ui): 配置npm发布注册表地址
- 在`publishConfig`中添加`registry`字段，指定发布到`https://registry.npmjs.org`

--- a/packages/vue-fluent-ui/package.json
+++ b/packages/vue-fluent-ui/package.json
@@ -65,5 +65,8 @@
   "dependencies": {
     "@vueuse/core": "^13.6.0",
     "lodash": "^4.17.21"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
